--- a/core/assets/css/typerocket.css
+++ b/core/assets/css/typerocket.css
@@ -202,7 +202,7 @@
   position: absolute;
   right: -8px;
   top: -8px;
-  z-index: 1000;
+  z-index: 10;
   text-decoration: none;
   border: solid #DFDFDF 1px;
   padding: 6px;
@@ -260,7 +260,7 @@
   font-size: 16px;
   position: absolute;
   left: 11px;
-  z-index: 1000;
+  z-index: 10;
   text-shadow: 0 1px 0 rgba(255,255,255,0.8);
   color: #9B9B9B;
 
@@ -469,7 +469,7 @@
   line-height: 1;
   font-size: 16px;
   position: absolute;
-  z-index: 1000;
+  z-index: 10;
   text-decoration: none;
   text-shadow: 0 1px 0 rgba(255,255,255,0.8);
   color: #333;
